fix(content-item-horizontal): update snapshots and cbh spacing

--- a/packages/styles/scss/components/content-block-horizontal/_content-block-horizontal.scss
+++ b/packages/styles/scss/components/content-block-horizontal/_content-block-horizontal.scss
@@ -42,18 +42,6 @@
     }
   }
 
-  :host(#{$dds-prefix}-content-block-horizontal) > *,
-  :host(#{$dds-prefix}-content-group-horizontal) > *,
-  .#{$prefix}--content-block-horizontal
-    .#{$prefix}--content-block
-    > div:not(:first-child),
-  .#{$prefix}--content-group-horizontal
-    .#{$prefix}--content-block
-    > div:not(:first-child) {
-    @include carbon--breakpoint('lg') {
-      padding-right: 16.75%;
-    }
-  }
   :host(#{$dds-prefix}-content-block-horizontal) ::slotted([slot='heading']),
   :host(#{$dds-prefix}-content-group-horizontal) ::slotted([slot='heading']),
   .#{$prefix}--content-block-horizontal .#{$prefix}--content-block__heading,
